fix(ColorBox): fixed missaligned copy button

--- a/components/ColorBox/ColorBox.module.scss
+++ b/components/ColorBox/ColorBox.module.scss
@@ -63,8 +63,9 @@
 
     .cpy_btn{
         position: absolute;
-        top: 40%;
-        left: 30%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         background-color: transparent;
         border-radius: 5px;
         padding: 0.5em 1em;
